--- a/src/index.css
+++ b/src/index.css
@@ -13,24 +13,36 @@ code {
 }
 
 .imagebox {
-  padding: 0px;
   position: relative;
-  text-align: center;
+  transition: 0.5s ease-in-out;
+}
+
+.imagebox:hover {
+  transform: scale(1.1);
 }
 
 .overlay-text {
   position: absolute;
-  margin: 0 auto;
-  bottom: 0;
-  left: 24px;
-  width: 300px;
+  bottom:24px;
+  left: 0px;
+  width: 100%;
   color: white;
-  background-color: rgba(0, 0, 0, 0.5); 
   text-align: center;
-  background: linear-gradient(to bottom, rgba(255, 33, 107, 0), rgba(0, 0, 0, 0.5));
+  background: rgba(0, 0, 0, 0.5); 
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.103), rgba(0, 0, 0, 0.685));
 }
 
 .body{
   background: rgb(255,255,255);
   background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,138,138,0.24413515406162467) 50%, rgba(255,255,255,1) 100%);
+}
+
+nav {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  nav {
+      width: auto !important;
+  }
 }
