--- a/src/index.css
+++ b/src/index.css
@@ -19,28 +19,34 @@ code {
 
 .overlay-text {
   position: absolute;
-  bottom:24px;
+  bottom: 24px;
   left: 0px;
   width: 100%;
   color: white;
   text-align: center;
-  background: rgba(0, 0, 0, 0.5); 
+  background: rgba(0, 0, 0, 0.5);
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.103), rgba(0, 0, 0, 0.685));
 }
 
-.body{
-  background: rgb(255,255,255);
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,138,138,0.24413515406162467) 50%, rgba(255,255,255,1) 100%);
+.body {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 138, 138, 0.24413515406162467) 50%, rgba(255, 255, 255, 1) 100%);
 }
 
 nav {
   width: 100%;
 }
 
+p {
+  font-size: larger;
+  text-align: justify;
+}
+
 @media (min-width: 768px) {
   nav {
-      width: auto !important;
+    width: auto !important;
   }
+
   .imagebox:hover {
     transform: scale(1.1);
   }
